crates/tribute-front/tests/snapshots/cps_lowering__handle_with_fn_handler.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: ir_text
---
core.module @test {
  !t0 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))
  !t1 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})
  !__tribute_cps_control = adt.enum() {name = @__tribute_cps_control, variants = [[@Normal, [tribute_rt.anyref]], [@Escape, [core.i32, tribute_rt.anyref]]]}

  func.func @get_state(%0: !t1) -> core.i32 attributes {tribute.calling_convention = 1} {
      %1 = ability.call {ability_ref = core.ability_ref() {name = @State}, op_name = @get} : tribute_rt.anyref
      %2 = core.unrealized_conversion_cast %1 : core.i32
      func.return %2
  }
  func.func @"test::__lambda_0"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      func.return %2
  }
  func.func @"test::__lambda_1"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      %3 = adt.variant_new %2 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
      func.return %3
  }
  func.func @run() -> core.i32 attributes {tribute.calling_convention = 0} {
      %0 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %1 = closure.new %0 {func_ref = @"test::__lambda_0"} : !t0
      %2 = closure.lambda(%3: tribute_rt.anyref) -> tribute_rt.anyref {
          %4 = adt.ref_null {type = !t1} : !t1
          %5 = func.call %4 {callee = @get_state, tribute.calling_convention = 1} : core.i32
          %6 = core.unrealized_conversion_cast %3 : !t0
          %7 = core.unrealized_conversion_cast %5 : tribute_rt.anyref
          %8 = func.call_indirect %6, %7 : tribute_rt.anyref
          func.return %8
      }
      %9 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %10 = closure.new %9 {func_ref = @"test::__lambda_1"} : !t0
      %11 = func.call_indirect %2, %10 : tribute_rt.anyref
      %12 = closure.lambda(%13: tribute_rt.anyref, %14: core.i32, %15: core.i32, %16: tribute_rt.anyref) -> tribute_rt.anyref {
          %17 = arith.const {value = 1972422014} : core.i32
          %18 = arith.cmpi %15, %17 {predicate = @eq} : core.i1
          %19 = scf.if %18 : tribute_rt.anyref {
              %20 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
              %21 = closure.new %20 {func_ref = @"test::__lambda_0"} : !t0
              %22 = arith.const {value = 42} : core.i32
              %23 = core.unrealized_conversion_cast %22 : tribute_rt.anyref
              %24 = func.call_indirect %21, %23 : tribute_rt.anyref
              scf.yield %24
          } {
              %25 = arith.const {value = 1} : core.i1
              %26 = scf.if %25 : tribute_rt.anyref {
                  %27 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
                  %28 = closure.new %27 {func_ref = @"test::__lambda_0"} : !t0
                  %29 = arith.const {value = unit} : core.nil
                  %30 = core.unrealized_conversion_cast %29 : tribute_rt.anyref
                  %31 = func.call_indirect %28, %30 : tribute_rt.anyref
                  scf.yield %31
              } {
                  func.unreachable
              }
              scf.yield %26
          }
          func.return %19
      }
      %32 = closure.lambda(%33: core.i32, %34: tribute_rt.anyref) -> tribute_rt.anyref {
          %35 = arith.const {value = 1972422014} : core.i32
          %36 = arith.cmpi %33, %35 {predicate = @eq} : core.i1
          %37 = scf.if %36 : tribute_rt.anyref {
              %38 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
              %39 = closure.new %38 {func_ref = @"test::__lambda_0"} : !t0
              %40 = arith.const {value = 42} : core.i32
              %41 = core.unrealized_conversion_cast %40 : tribute_rt.anyref
              %42 = func.call_indirect %39, %41 : tribute_rt.anyref
              scf.yield %42
          } {
              %43 = arith.const {value = 1} : core.i1
              %44 = scf.if %43 : tribute_rt.anyref {
                  %45 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
                  %46 = closure.new %45 {func_ref = @"test::__lambda_0"} : !t0
                  %47 = arith.const {value = unit} : core.nil
                  %48 = core.unrealized_conversion_cast %47 : tribute_rt.anyref
                  %49 = func.call_indirect %46, %48 : tribute_rt.anyref
                  scf.yield %49
              } {
                  func.unreachable
              }
              scf.yield %44
          }
          func.return %37
      }
      %50 = effect.fresh_prompt_tag : core.i32
      %51 = ability.handle_dispatch %11, %50, %12, %32 {result_type = tribute_rt.anyref, tag = 0} : tribute_rt.anyref {
          ability.done {
            ^bb13(%52: tribute_rt.anyref):
              %53 = core.unrealized_conversion_cast %52 : core.i32
              %54 = core.unrealized_conversion_cast %53 : tribute_rt.anyref
              %55 = func.call_indirect %1, %54 : tribute_rt.anyref
              scf.yield %55
          }
          ability.yield {ability_ref = core.ability_ref() {name = @State}, op_name = @get} {
            ^bb14(%56: tribute_rt.anyref, %57: tribute_rt.anyref):
              scf.yield %57
          }
          ability.yield {ability_ref = core.ability_ref() {name = @State}, op_name = @set} {
            ^bb15(%58: tribute_rt.anyref, %59: tribute_rt.anyref):
              scf.yield %59
          }
      } {
        ^bb16(%60: tribute_rt.anyref):
          %61 = func.call_indirect %1, %60 : tribute_rt.anyref
          scf.yield %61
      }
      %62 = core.unrealized_conversion_cast %51 : core.i32
      func.return %62
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
