crates/tribute-front/tests/snapshots/cps_lowering__multi_arg_ability_op.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: ir_text
---
core.module @test {
  !__ability_args_tuple = adt.struct() {fields = [[@_0, tribute_rt.anyref], [@_1, tribute_rt.anyref]], name = @__ability_args_tuple}

  func.func @store(%0: core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})) -> core.nil attributes {tribute.calling_convention = 1} {
      %1 = arith.const {value = 1} : core.i32
      %2 = arith.const {value = 2} : core.i32
      %3 = core.unrealized_conversion_cast %1 : tribute_rt.anyref
      %4 = core.unrealized_conversion_cast %2 : tribute_rt.anyref
      %5 = adt.struct_new %3, %4 {type = !__ability_args_tuple} : tribute_rt.anyref
      %6 = ability.legacy_call %5 {ability_ref = core.ability_ref() {name = @KV}, op_name = @put} : tribute_rt.anyref
      %7 = core.unrealized_conversion_cast %6 : core.nil
      func.return %7
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
