crates/tribute-front/tests/snapshots/cps_lowering__nested_effectful_call_in_argument.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: ir_text
---
core.module @test {
  !t0 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})
  !t1 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))

  func.func @read(%0: !t0, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = ability.perform %1 {ability_ref = core.ability_ref() {name = @State}, op_name = @get} : tribute_rt.anyref
      func.return %2
  }
  func.func @add_one(%0: core.i32) -> core.i32 attributes {tribute.calling_convention = 0} {
      %1 = arith.const {value = 1} : core.i32
      %2 = func.call %0, %1 {callee = @"Int::+", tribute.calling_convention = 0} : core.i32
      func.return %2
  }
  func.func @run(%0: !t0, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = closure.lambda(%3: tribute_rt.anyref) -> tribute_rt.anyref [%1] {
          %4 = core.unrealized_conversion_cast %3 : core.i32
          %5 = func.call %4 {callee = @add_one, tribute.calling_convention = 0} : core.i32
          %6 = core.unrealized_conversion_cast %1 : !t1
          %7 = core.unrealized_conversion_cast %5 : tribute_rt.anyref
          %8 = func.call_indirect %6, %7 : tribute_rt.anyref
          func.return %8
      }
      %9 = func.call %0, %2 {callee = @read, tribute.calling_convention = 2} : tribute_rt.anyref
      func.return %9
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
