crates/tribute-front/tests/snapshots/cps_lowering__nested_effectful_call_in_case_arm.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: ir_text
---
core.module @test {
  !t0 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))
  !t1 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})

  func.func @read(%0: !t1, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = ability.legacy_perform %1 {ability_ref = core.ability_ref() {name = @State}, op_name = @get} : tribute_rt.anyref
      func.return %2
  }
  func.func @run(%0: !t1, %1: tribute_rt.anyref, %2: core.i1) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %3 = arith.const {value = true} : core.i1
      %4 = arith.cmpi %2, %3 {predicate = @eq} : core.i1
      %5 = scf.if %4 : tribute_rt.anyref {
          %6 = closure.lambda(%7: tribute_rt.anyref) -> tribute_rt.anyref [%1] {
              %8 = core.unrealized_conversion_cast %7 : core.i32
              %9 = arith.const {value = 1} : core.i32
              %10 = func.call %8, %9 {callee = @"Int::+", tribute.calling_convention = 0} : core.i32
              %11 = core.unrealized_conversion_cast %1 : !t0
              %12 = core.unrealized_conversion_cast %10 : tribute_rt.anyref
              %13 = func.call_indirect %11, %12 : tribute_rt.anyref
              func.return %13
          }
          %14 = func.call %0, %6 {callee = @read, tribute.calling_convention = 2} : tribute_rt.anyref
          scf.yield %14
      } {
          %15 = arith.const {value = 0} : core.i32
          %16 = core.unrealized_conversion_cast %1 : !t0
          %17 = core.unrealized_conversion_cast %15 : tribute_rt.anyref
          %18 = func.call_indirect %16, %17 : tribute_rt.anyref
          scf.yield %18
      }
      func.return %5
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
