crates/tribute-front/tests/snapshots/cps_lowering__nested_effectful_call_in_handle_body.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: ir_text
---
core.module @test {
  !__tribute_cps_control = adt.enum() {name = @__tribute_cps_control, variants = [[@Normal, [tribute_rt.anyref]], [@Escape, [core.i32, tribute_rt.anyref]]]}
  !t0 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))
  !t1 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})

  func.func @read(%0: !t1, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = ability.legacy_perform %1 {ability_ref = core.ability_ref() {name = @State}, op_name = @get} : tribute_rt.anyref
      func.return %2
  }
  func.func @"test::__lambda_0"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      func.return %2
  }
  func.func @"test::__lambda_1"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      %3 = adt.variant_new %2 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
      func.return %3
  }
  func.func @run() -> core.i32 attributes {tribute.calling_convention = 0} {
      %0 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %1 = closure.new %0 {func_ref = @"test::__lambda_0"} : !t0
      %2 = closure.lambda(%3: tribute_rt.anyref) -> tribute_rt.anyref {
          %4 = closure.lambda(%5: tribute_rt.anyref) -> tribute_rt.anyref [%3] {
              %6 = core.unrealized_conversion_cast %5 : core.i32
              %7 = arith.const {value = 1} : core.i32
              %8 = func.call %6, %7 {callee = @"Int::+", tribute.calling_convention = 0} : core.i32
              %9 = core.unrealized_conversion_cast %3 : !t0
              %10 = core.unrealized_conversion_cast %8 : tribute_rt.anyref
              %11 = func.call_indirect %9, %10 : tribute_rt.anyref
              func.return %11
          }
          %12 = adt.ref_null {type = !t1} : !t1
          %13 = func.call %12, %4 {callee = @read, tribute.calling_convention = 2} : tribute_rt.anyref
          func.return %13
      }
      %14 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %15 = closure.new %14 {func_ref = @"test::__lambda_1"} : !t0
      %16 = func.call_indirect %2, %15 : tribute_rt.anyref
      %17 = closure.lambda(%18: tribute_rt.anyref, %19: core.i32, %20: core.i32, %21: tribute_rt.anyref) -> tribute_rt.anyref {
          %22 = arith.const {value = 1} : core.i1
          %23 = scf.if %22 : tribute_rt.anyref {
              %24 = closure.lambda(%25: tribute_rt.anyref) -> tribute_rt.anyref [%19] {
                  %26 = adt.variant_new %19, %25 {tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
                  func.return %26
              }
              %27 = arith.const {value = 41} : core.i32
              %28 = core.unrealized_conversion_cast %18 : !t0
              %29 = core.unrealized_conversion_cast %27 : tribute_rt.anyref
              %30 = func.call_indirect %28, %29 : tribute_rt.anyref
              %31 = adt.variant_is %30 {tag = @Normal, type = !__tribute_cps_control} : core.i1
              %32 = scf.if %31 : tribute_rt.anyref {
                  %33 = adt.variant_cast %30 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
                  %34 = adt.variant_get %33 {field = 0, tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
                  %35 = func.call_indirect %24, %34 : tribute_rt.anyref
                  %36 = adt.variant_cast %35 {tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
                  %37 = adt.variant_get %36 {field = 0, tag = @Escape, type = !__tribute_cps_control} : core.i32
                  %38 = adt.variant_get %36 {field = 1, tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
                  %39 = arith.cmpi %37, %19 {predicate = @eq} : core.i1
                  %40 = scf.if %39 : tribute_rt.anyref {
                      %41 = adt.variant_new %38 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
                      scf.yield %41
                  } {
                      scf.yield %35
                  }
                  scf.yield %40
              } {
                  scf.yield %30
              }
              scf.yield %32
          } {
              func.unreachable
          }
          func.return %23
      }
      %42 = arith.const {value = 0} : tribute_rt.anyref
      %43 = effect.fresh_prompt_tag : core.i32
      %44 = ability.legacy_handle_dispatch %16, %43, %17, %42 {result_type = tribute_rt.anyref, tag = 0} : tribute_rt.anyref {
          ability.done {
            ^bb12(%45: tribute_rt.anyref):
              %46 = core.unrealized_conversion_cast %45 : core.i32
              %47 = core.unrealized_conversion_cast %46 : tribute_rt.anyref
              %48 = func.call_indirect %1, %47 : tribute_rt.anyref
              scf.yield %48
          }
          ability.suspend {ability_ref = core.ability_ref() {name = @State}, op_name = @get} {
            ^bb13(%49: tribute_rt.anyref, %50: tribute_rt.anyref):
              scf.yield %50
          }
      } {
        ^bb14(%51: tribute_rt.anyref):
          %52 = func.call_indirect %1, %51 : tribute_rt.anyref
          scf.yield %52
      }
      %53 = core.unrealized_conversion_cast %44 : core.i32
      func.return %53
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
