crates/tribute-front/tests/snapshots/cps_lowering__nested_effectful_call_in_handler_arm.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: ir_text
---
core.module @test {
  !__tribute_cps_control = adt.enum() {name = @__tribute_cps_control, variants = [[@Normal, [tribute_rt.anyref]], [@Escape, [core.i32, tribute_rt.anyref]]]}
  !t0 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))
  !t1 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})

  func.func @read_log(%0: !t1, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = ability.legacy_perform %1 {ability_ref = core.ability_ref() {name = @Log}, op_name = @value} : tribute_rt.anyref
      func.return %2
  }
  func.func @"test::__lambda_0"(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref {
      %3 = adt.variant_new %2 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
      func.return %3
  }
  func.func @run(%0: !t1, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = closure.lambda(%3: tribute_rt.anyref) -> tribute_rt.anyref {
          %4 = ability.legacy_perform %3 {ability_ref = core.ability_ref() {name = @State}, op_name = @get} : tribute_rt.anyref
          func.return %4
      }
      %5 = adt.ref_null {type = tribute_rt.anyref} : tribute_rt.anyref
      %6 = closure.new %5 {func_ref = @"test::__lambda_0"} : !t0
      %7 = func.call_indirect %2, %6 : tribute_rt.anyref
      %8 = closure.lambda(%9: tribute_rt.anyref, %10: core.i32, %11: core.i32, %12: tribute_rt.anyref) -> tribute_rt.anyref {
          %13 = arith.const {value = 1} : core.i1
          %14 = scf.if %13 : tribute_rt.anyref {
              %15 = closure.lambda(%16: tribute_rt.anyref) -> tribute_rt.anyref [%10] {
                  %17 = adt.variant_new %10, %16 {tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
                  func.return %17
              }
              %18 = closure.lambda(%19: tribute_rt.anyref) -> tribute_rt.anyref [%9, %15, %10] {
                  %20 = core.unrealized_conversion_cast %19 : core.i32
                  %21 = arith.const {value = 1} : core.i32
                  %22 = func.call %20, %21 {callee = @"Int::+", tribute.calling_convention = 0} : core.i32
                  %23 = core.unrealized_conversion_cast %9 : !t0
                  %24 = core.unrealized_conversion_cast %22 : tribute_rt.anyref
                  %25 = func.call_indirect %23, %24 : tribute_rt.anyref
                  %26 = adt.variant_is %25 {tag = @Normal, type = !__tribute_cps_control} : core.i1
                  %27 = scf.if %26 : tribute_rt.anyref {
                      %28 = adt.variant_cast %25 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
                      %29 = adt.variant_get %28 {field = 0, tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
                      %30 = func.call_indirect %15, %29 : tribute_rt.anyref
                      %31 = adt.variant_cast %30 {tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
                      %32 = adt.variant_get %31 {field = 0, tag = @Escape, type = !__tribute_cps_control} : core.i32
                      %33 = adt.variant_get %31 {field = 1, tag = @Escape, type = !__tribute_cps_control} : tribute_rt.anyref
                      %34 = arith.cmpi %32, %10 {predicate = @eq} : core.i1
                      %35 = scf.if %34 : tribute_rt.anyref {
                          %36 = adt.variant_new %33 {tag = @Normal, type = !__tribute_cps_control} : tribute_rt.anyref
                          scf.yield %36
                      } {
                          scf.yield %30
                      }
                      scf.yield %35
                  } {
                      scf.yield %25
                  }
                  func.return %27
              }
              %37 = func.call %0, %18 {callee = @read_log, tribute.calling_convention = 2} : tribute_rt.anyref
              scf.yield %37
          } {
              func.unreachable
          }
          func.return %14
      }
      %38 = arith.const {value = 0} : tribute_rt.anyref
      %39 = effect.fresh_prompt_tag : core.i32
      %40 = ability.legacy_handle_dispatch %7, %39, %8, %38 {result_type = tribute_rt.anyref, tag = 0} : tribute_rt.anyref {
          ability.done {
            ^bb12(%41: tribute_rt.anyref):
              %42 = core.unrealized_conversion_cast %1 : !t0
              %43 = func.call_indirect %42, %41 : tribute_rt.anyref
              scf.yield %43
          }
          ability.suspend {ability_ref = core.ability_ref() {name = @State}, op_name = @get} {
            ^bb13(%44: tribute_rt.anyref, %45: tribute_rt.anyref):
              scf.yield %45
          }
      } {
        ^bb14(%46: tribute_rt.anyref):
          %47 = core.unrealized_conversion_cast %1 : !t0
          %48 = func.call_indirect %47, %46 : tribute_rt.anyref
          scf.yield %48
      }
      func.return %40
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
