crates/tribute-front/tests/snapshots/cps_lowering__nested_effectful_call_in_short_circuit_rhs.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: ir_text
---
core.module @test {
  !t0 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})

  func.func @read(%0: !t0, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = ability.perform %1 {ability_ref = core.ability_ref() {name = @Flag}, op_name = @get} : tribute_rt.anyref
      func.return %2
  }
  func.func @run(%0: !t0, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = arith.const {value = false} : core.i1
      %3 = scf.if %2 : tribute_rt.anyref {
          %4 = func.call %0, %1 {callee = @read, tribute.calling_convention = 2} : tribute_rt.anyref
          scf.yield %4
      } {
          %5 = arith.const {value = false} : core.i1
          %6 = core.unrealized_conversion_cast %1 : closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))
          %7 = core.unrealized_conversion_cast %5 : tribute_rt.anyref
          %8 = func.call_indirect %6, %7 : tribute_rt.anyref
          scf.yield %8
      }
      func.return %3
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
