crates/tribute-front/tests/snapshots/cps_lowering__nested_effectful_closure_call.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: ir_text
---
core.module @test {
  !t0 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})
  !t1 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))

  func.func @run(%0: !t0, %1: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %2 = closure.lambda(%3: !t0, %4: tribute_rt.anyref) -> tribute_rt.anyref {tribute.calling_convention = 2} {
          %5 = ability.legacy_perform %4 {ability_ref = core.ability_ref() {name = @State}, op_name = @get} : tribute_rt.anyref
          func.return %5
      }
      %6 = closure.lambda(%7: tribute_rt.anyref) -> tribute_rt.anyref [%1] {
          %8 = core.unrealized_conversion_cast %7 : core.i32
          %9 = arith.const {value = 1} : core.i32
          %10 = func.call %8, %9 {callee = @"Int::+", tribute.calling_convention = 0} : core.i32
          %11 = core.unrealized_conversion_cast %1 : !t1
          %12 = core.unrealized_conversion_cast %10 : tribute_rt.anyref
          %13 = func.call_indirect %11, %12 : tribute_rt.anyref
          func.return %13
      }
      %14 = func.call_indirect %2, %0, %6 {tribute.calling_convention = 2} : tribute_rt.anyref
      func.return %14
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
