crates/tribute-front/tests/snapshots/cps_lowering__record_spread_capture_survives_cps_continuation.snap
---
source: crates/tribute-front/tests/cps_lowering.rs
expression: "run_ast_pipeline_with_ir(db, source)"
---
core.module @test {
  !t0 = closure.closure(core.func(tribute_rt.anyref, tribute_rt.anyref))
  !t1 = core.array(adt.struct() {fields = [[@ability_id, core.i32], [@prompt_tag, core.i32], [@tr_dispatch_fn, core.ptr], [@handler_dispatch, core.ptr]], name = @_Marker})
  !Point = adt.struct() {fields = [[@x, core.i32], [@y, core.i32]], name = @Point}

  core.module @Point {
    !Point_1 = adt.typeref() {name = @Point}

    func.func @"Point::x"(%0: !Point_1) -> core.i32 {
        %1 = adt.struct_get %0 {field = 0, type = !Point} : core.i32
        func.return %1
    }
    func.func @"Point::y"(%0: !Point_1) -> core.i32 {
        %1 = adt.struct_get %0 {field = 1, type = !Point} : core.i32
        func.return %1
    }
  }
  func.func @run(%0: !t1, %1: tribute_rt.anyref, %2: tribute_rt.anyref) -> tribute_rt.anyref attributes {tribute.calling_convention = 2} {
      %3 = closure.lambda(%4: tribute_rt.anyref) -> tribute_rt.anyref [%2, %1] {
          %5 = core.unrealized_conversion_cast %4 : core.nil
          %6 = closure.lambda(%7: !t1, %8: tribute_rt.anyref) -> tribute_rt.anyref {tribute.calling_convention = 2} [%2] {
              %9 = arith.const {value = 1} : core.i32
              %10 = adt.struct_get %2 {field = 1, type = !Point} : tribute_rt.anyref
              %11 = adt.struct_new %9, %10 {type = !Point} : adt.typeref() {name = @Point}
              %12 = core.unrealized_conversion_cast %8 : !t0
              %13 = core.unrealized_conversion_cast %11 : tribute_rt.anyref
              %14 = func.call_indirect %12, %13 : tribute_rt.anyref
              func.return %14
          }
          %15 = core.unrealized_conversion_cast %1 : !t0
          %16 = core.unrealized_conversion_cast %6 : tribute_rt.anyref
          %17 = func.call_indirect %15, %16 : tribute_rt.anyref
          func.return %17
      }
      %18 = ability.legacy_perform %3 {ability_ref = core.ability_ref() {name = @Trace}, op_name = @before} : tribute_rt.anyref
      func.return %18
  }
  func.func @main() -> core.nil attributes {tribute.calling_convention = 0} {
      %0 = arith.const {value = unit} : core.nil
      func.return %0
  }
}
